[package]
name = "ev3dev-rs"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "High level pybricks-like rust bindings for e3dev"
repository = "https://github.com/shaggysa/ev3dev-rs"
version = "0.2.2"
edition = "2024"

[dependencies]
fixed = "1.29.0"
futures-concurrency = "7.7.1"
scopeguard = "1.2.0"
tokio = { version = "1.48.0", features = ["time", "macros"] }


[profile.release]
lto = true
strip = true
opt-level = "s"

[lints.clippy]
unwrap_used = "deny"
missing_docs = "deny"
